syntax = "proto3";

option go_package = "model";

import "common.proto";

message StateManuscript {
    string id = 1;
    int64 createdOn = 2;
    int64 modifiedOn = 3;
    string hash = 4;
    string threadId = 5;
    int32 versionNumber = 6;
    string commitMsg = 7;
    string title = 8;
    repeated Author author = 9;
    ManuscriptStatus status = 10;
    string journalId = 11;
    string volumeId = 12;
    string firstPage = 13;
    string lastPage = 14;
}

message Author {
    string authorId = 1;
    bool didSign = 2;
    int32 authorNumber = 3;
}

enum ManuscriptStatus {
    init = 0;
    new = 1;
    reviewable = 2;
    rejected = 3;
    published = 4;
    assigned = 5;
}

message StateManuscriptThread {
    string id = 1;
    repeated string manuscriptId = 2;
    bool isReviewable = 3;
}

message StateReview {
    string id = 1;
    int64 createdOn = 2;
    string manuscriptId = 3;
    string reviewAuthorId = 4;
    string hash = 5;
    Judgement judgement = 6;
}

message CommandManuscriptCreate {
    string manuscriptId = 1;
    string manuscriptThreadId = 2;
    string hash = 3;
    string commitMsg = 4;
    string title = 5;
    repeated string authorId = 6;
    string journalId = 7;
}

message CommandManuscriptCreateNewVersion {
    string manuscriptId = 1;
    string previousManuscriptId = 2;
    string hash = 3;
    string commitMsg = 4;
    string title = 5;
    repeated string authorId = 6;
}

message CommandManuscriptAcceptAuthorship {
    string manuscriptId = 1;
    repeated Author author = 2;
}

message CommandManuscriptAllowReview {
    string ThreadId = 1;
    repeated ThreadReferenceItem threadReference = 2;
}

message ThreadReferenceItem {
    string manuscriptId = 1;
    ManuscriptStatus manuscriptStatus = 2;
}

message CommandWriteReview {
    string reviewId = 1;
    string manuscriptId = 2;
    string hash = 3;
    Judgement judgement = 4;
}

message CommandManuscriptJudge {
    string manuscriptId = 1;
    repeated string reviewId = 2;
    ManuscriptJudgement judgement = 3;
}

enum ManuscriptJudgement {
    judgementRejected = 0;
    judgementAccepted = 1;
}

message CommandManuscriptAssign {
    string manuscriptId = 1;
    string volumeId = 2;
    string firstPage = 3;
    string lastPage = 4;
}
